--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -9,17 +9,19 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="12sp"
-        android:background="@color/darkGray">
+        android:background="#ffffff"
+        android:clipToPadding="false"
+        android:padding="5sp">
 
         <android.support.v7.widget.CardView
             android:id="@+id/list_row"
             android:layout_width="match_parent"
             android:layout_height="80sp"
             android:layout_alignParentTop="true"
+            android:background="@color/cardview_light_background"
+            android:elevation="100dp"
             tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="0dp"
-            android:background="@color/cardview_light_background" >
+            tools:layout_editor_absoluteY="0dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -36,69 +38,69 @@
 
                 <TextView
                     android:id="@+id/listChoreTitle"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginLeft="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
                     android:layout_toRightOf="@id/listChoreLogo"
                     android:text="TextView"
                     android:textSize="17sp" />
 
                 <Button
                     android:id="@+id/deleteId"
-                    android:background="@android:drawable/ic_menu_delete"
-                    android:layout_marginTop="5dp"
                     android:layout_width="25dp"
                     android:layout_height="20dp"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentTop="true"
-                    android:paddingTop="15dp"/>
+                    android:layout_marginTop="5dp"
+                    android:background="@android:drawable/ic_menu_delete"
+                    android:paddingTop="15dp" />
 
                 <Button
                     android:id="@+id/editId"
-                    android:background="@android:drawable/ic_menu_edit"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginRight="5dp"
                     android:layout_width="25dp"
                     android:layout_height="20dp"
-                    android:layout_toLeftOf="@id/deleteId"
                     android:layout_alignParentTop="true"
-                    android:paddingTop="15dp"/>
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_toLeftOf="@id/deleteId"
+                    android:background="@android:drawable/ic_menu_edit"
+                    android:paddingTop="15dp" />
 
                 <TextView
                     android:id="@+id/listChoreAssignedto"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginLeft="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/listChoreLogo"
                     android:layout_below="@id/listChoreTitle"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_toRightOf="@id/listChoreLogo"
                     android:text="TextView"
                     android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/listChoreAssignedby"
-                    android:layout_marginLeft="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/listChoreLogo"
                     android:layout_below="@id/listChoreAssignedto"
-                    android:text="TextView"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
+                    android:layout_toRightOf="@id/listChoreLogo"
+                    android:text="TextView"
                     android:textSize="10sp" />
 
                 <TextView
                     android:id="@+id/listChoreDate"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/listChoreAssignedby"
-                    android:layout_below="@id/listChoreAssignedto"
-                    android:layout_alignTop="@id/listChoreAssignedby"
                     android:layout_alignParentRight="true"
-                    android:textAlignment="textEnd"
+                    android:layout_alignTop="@id/listChoreAssignedby"
+                    android:layout_below="@id/listChoreAssignedto"
+                    android:layout_toRightOf="@id/listChoreAssignedby"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:text="TextView"
+                    android:textAlignment="textEnd"
                     android:textSize="10sp" />
 
             </RelativeLayout>
