--- a/app/src/main/res/layout-v26/activity_main.xml
+++ b/app/src/main/res/layout-v26/activity_main.xml
@@ -60,7 +60,7 @@
     </android.support.v7.widget.CardView>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/searchButton"
         android:layout_width="197dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
