--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -7,7 +7,7 @@
     tools:context=".activity.activities.RecipeList">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recipelist"
+        android:id="@+id/recipelistID"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
