--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -3,16 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/list_row"
         android:layout_width="match_parent"
-        android:layout_height="200dp" >
+        android:layout_height="200sp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="wrap_content"
@@ -22,6 +22,7 @@
                 android:layout_marginTop="0dp"
                 android:contentDescription="@string/recipeIcon"
                 app:srcCompat="@mipmap/ic_launcher_round" />
+
 
             <TextView
                 android:id="@+id/recipeTitle"
@@ -62,4 +63,5 @@
                 android:background="?attr/actionModeShareDrawable" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
+
 </android.support.constraint.ConstraintLayout>
