--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -3,20 +3,24 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="5dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/list_row"
         android:layout_width="match_parent"
-        android:layout_height="200sp">
+        android:layout_height="200sp"
+        android:layout_marginTop="15sp"
+        android:padding="5sp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="80sp"
+                android:layout_height="80sp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="0dp"
@@ -28,6 +32,8 @@
                 android:id="@+id/recipeTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:layout_below="@+id/imageView"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="12dp"
@@ -39,16 +45,14 @@
             <TextView
                 android:id="@+id/ingredientsView"
                 android:layout_width="match_parent"
-                android:layout_height="33dp"
+                android:layout_height="30sp"
+                android:maxLines="2"
+                android:ellipsize="end"
                 android:layout_below="@+id/recipeTitle"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginStart="0dp"
-                android:layout_marginLeft="12dp"
-                android:layout_marginTop="14dp"
-                android:layout_marginRight="12dp"
-                android:layout_marginBottom="42dp"
+                android:layout_margin="5sp"
                 android:text="@string/ingredients"
                 android:textSize="16sp" />
 
