--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -3,5 +3,6 @@
     <base-config cleartextTrafficPermitted="false" />
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">www.recipepuppy.com</domain>
+        <domain includeSubdomains="true">img.recipepuppy.com</domain>
     </domain-config>
 </network-security-config>
