--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -11,7 +11,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_height="450dp"
         app:cardCornerRadius="14dp"
         app:cardElevation="5dp"
         app:cardUseCompatPadding="true"
@@ -24,15 +24,23 @@
             android:orientation="vertical"
             android:background="@color/colorAccent">
 
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/chat_icon"
+                android:contentDescription="chat logo" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#ffffff"
-                android:textSize="24dp"
+                android:textSize="18sp"
                 android:textStyle="italic"
-                android:layout_marginTop="30dp"
-                android:layout_marginStart="30dp"
-                android:text="Login" />
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center"
+                android:text="Create a new account" />
 
 
             <LinearLayout
@@ -44,7 +52,20 @@
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/loginEmailText"
+                    android:id="@+id/createAccDisplayNameText"
+                    android:layout_width="match_parent"
+                    android:layout_height="32dp"
+                    android:textColor="#f0f7f4"
+                    android:hint="Enter Display Name"
+                    android:paddingBottom="2dp"
+                    android:layout_marginTop="10dp"
+                    android:inputType="textEmailAddress"
+                    android:background="@drawable/selector_bg_edit_2"
+                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
+                    />
+
+                <EditText
+                    android:id="@+id/createAccEmailText"
                     android:layout_width="match_parent"
                     android:layout_height="32dp"
                     android:textColor="#f0f7f4"
@@ -57,7 +78,7 @@
                     />
 
                 <EditText
-                    android:id="@+id/loginPasswordText"
+                    android:id="@+id/createAccPasswordText"
                     android:layout_width="match_parent"
                     android:layout_height="32dp"
                     android:textColor="#f0f7f4"
@@ -70,24 +91,23 @@
                     />
 
                 <Button
-                    android:id="@+id/loginPageButton"
+                    android:id="@+id/createAccountPageButton"
                     android:background="@drawable/bt_shape"
                     android:layout_width="wrap_content"
-                    android:text="Submit"
+                    android:text="Create Account"
                     android:stateListAnimator="@drawable/state_list_animator_z"
                     android:layout_height="44dp"
-                    android:layout_marginStart="50dp"
                     android:layout_marginTop="20dp"
-                    android:layout_marginEnd="8dp"
                     android:paddingLeft="20sp"
                     android:paddingRight="20sp"
+                    android:layout_gravity="center"
                     android:textColor="#d3d3d3"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
-            
-            
+
+
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
